objects/Opportunity/fields/Total_Unit_price__c.field-meta.xml
<CustomField>
    <fullName>Total_Unit_price__c</fullName>
    <label>Total Unit price</label>
    <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>